# CMakeTemplateProj

./: CMakeLists.txt  README.md
CMakeTemplateProj/src/utils/: logger.h
CMakeTemplateProj/test/: CMakeLists.txt  test00-env.cpp
